# zero

./: BEST_PRACTICES.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  improved_agent_usage.md  zero-framework-spec.md  zero.toml
crates/zero/: Cargo.toml
crates/zero-bundler/: Cargo.toml
crates/zero-bundler/src/: bundler.rs  css.rs  lib.rs  minify.rs
crates/zero-config/: Cargo.toml
crates/zero-config/src/: config.rs  lib.rs  toml_writer.rs
crates/zero-dev/: Cargo.toml
crates/zero-dev/src/: files.rs  lib.rs  local.rs  preview.rs  proxy.rs  sass.rs  server.rs  sse.rs  transpile.rs  watch.rs
crates/zero-lint/: Cargo.toml
crates/zero-lint/src/: lib.rs  scan.rs  tokens.rs  vars.rs  walk.rs
crates/zero-lint/src/js/: context.rs  diag.rs  mod.rs  parse_error.rs  walk.rs
crates/zero-lint/src/js/rules/: c01_no_class_component.rs  c02_custom_elements.rs  i01_unknown_specifier.rs  i02_dot_zero_import.rs  mod.rs  r01_template_val_read.rs  r02_val_assignment.rs  r03_module_reactive.rs  s01_function_size.rs  t01_event_listener.rs  t02_event_modifier.rs  t03_each_no_key.rs  t04_direct_dom.rs
crates/zero-lint/src/rules/: alignment.rs  box_model.rs  color.rs  layout.rs  mod.rs  typography.rs  undefined_var.rs
crates/zero-lint/tests/: alignment_rule.rs  box_model_rules.rs  color_rule.rs  layout_rule.rs  typography_rules.rs  undefined_var_rule.rs
crates/zero-lint/tests/fixtures/alignment/: fail_align_items_center.scss  fail_justify_space_between.scss  fail_text_align.scss  pass_override_selector.scss  pass_var.scss
crates/zero-lint/tests/fixtures/box_model/: fail_calc_raw.scss  fail_gap.scss  fail_margin.scss  fail_padding_single.scss  fail_padding_two_value.scss  fail_radius_50pct.scss  fail_radius_999.scss  pass_border.scss  pass_padding.scss  pass_radius.scss
crates/zero-lint/tests/fixtures/color/: fail_hex_background.scss  fail_rgb_function.scss  pass_sentinels.scss  pass_var.scss
crates/zero-lint/tests/fixtures/layout/: fail_cluster.scss  fail_cluster_no_gap.scss  fail_flank.scss  fail_frame.scss  fail_grid.scss  fail_inline_flex_cluster.scss  fail_stack.scss  fail_stack_no_gap.scss  pass_cluster.scss  pass_cluster_override.scss  pass_flex_only.scss
crates/zero-lint/tests/fixtures/typography/: fail_leading_unitless.scss  fail_size_px.scss  fail_size_rem.scss  fail_tracking_em.scss  fail_weight_keyword.scss  fail_weight_numeric.scss  pass_leading.scss  pass_size.scss  pass_tracking.scss  pass_weight.scss
crates/zero-sass/: Cargo.toml
crates/zero-sass/src/: lib.rs
crates/zero-scaffold/: Cargo.toml
crates/zero-scaffold/src/: lib.rs
crates/zero-scaffold/src/scaffold/: AGENTS.md  index.html
crates/zero-scaffold/src/scaffold/.zero/: components.d.ts
crates/zero-scaffold/src/scaffold/.zero/components/: Button.test.ts  Button.ts  Card.test.ts  Card.ts  Checkbox.test.ts  Checkbox.ts  Combobox.test.ts  Combobox.ts  Dialog.ts  Drawer.test.ts  Drawer.ts  Input.test.ts  Input.ts  Pagination.test.ts  Pagination.ts  Radio.test.ts  Radio.ts  Select.test.ts  Select.ts  Spinner.test.ts  Spinner.ts  Table.test.ts  Table.ts  Tabs.ts  TextArea.test.ts  TextArea.ts  Toggle.test.ts  Toggle.ts  _internal.test.ts  _internal.ts  form.test.ts  form.ts  index.ts  rules.test.ts  rules.ts
crates/zero-scaffold/src/scaffold/.zero/styles/: _alignment.scss  _base.scss  _components.scss  _layout.scss  _palette.scss  _themes.scss  _tokens.scss  _typography.scss  _utilities.scss  zero.scss
crates/zero-scaffold/src/scaffold/.zero/styles/components/: _avatar.scss  _badge.scss  _button.scss  _card.scss  _checkbox.scss  _combobox.scss  _dialog.scss  _drawer.scss  _input.scss  _pagination.scss  _radio.scss  _select.scss  _spinner.scss  _table.scss  _tabs.scss  _textarea.scss  _toast.scss  _toggle.scss
crates/zero-scaffold/src/scaffold/.zero/styles/themes/: _dark.scss  _light.scss
crates/zero-scaffold/src/scaffold/src/routes/: home.test.ts  home.ts
crates/zero-test-runner/: Cargo.toml
crates/zero-test-runner/src/: coverage.rs  discovery.rs  harness.rs  lib.rs  loader.rs  mutate.rs  reporter.rs  result.rs  timing.rs
crates/zero-test-runner/tests/: timer_host.rs
crates/zero/src/: lib.rs  main.rs  prompts.rs  test_support.rs
crates/zero/src/cmd/: build.rs  dev.rs  init.rs  lint.rs  mod.rs  mutate.rs  mutate_cache.rs  preview.rs  test.rs  update.rs
crates/zero/tests/: build_full.rs  build_smoke.rs  build_sourcemap.rs  cli_skeleton.rs  component_library.rs  config_load.rs  design_system.rs  dev_local_index.rs  dev_serves_files.rs  dev_serves_runtime.rs  dev_serves_ts.rs  dev_writes_dts_on_start.rs  e2e_init_build_node_eval.rs  e2e_init_dev.rs  e2e_init_js_project.rs  e2e_init_test.rs  e2e_init_typescript.rs  e2e_test_no_config.rs  examples_build.rs  examples_layout.rs  examples_tests.rs  init_confirm.rs  init_existing_toml.rs  lint_agent_failures.rs  lint_examples.rs  lint_js_agent_failures.rs  lint_js_smoke.rs  lint_smoke.rs  runtime_evaluates.rs  scss_build.rs  scss_dev.rs  showcase_build.rs  showcase_dev.rs  test_runner_smoke.rs  update.rs
crates/zero/tests/common/: mod.rs
crates/zero/tests/fixtures/agent_failures/styles/: app.scss
crates/zero/tests/fixtures/js_agent_failures/: zero.toml
crates/zero/tests/fixtures/js_agent_failures/.zero/components/: Button.ts
crates/zero/tests/fixtures/js_agent_failures/src/components/: Bad.ts
crates/zero/tests/fixtures/js_agent_failures/src/features/parts/: store.ts
crates/zero/tests/fixtures/js_agent_failures/src/lib/: bad.ts  leaky-effect.ts
crates/zero/tests/fixtures/js_agent_failures/src/routes/: Bad.ts
crates/zero/tests/fixtures/js_agent_failures/src/stores/: ok.ts
docs/: _config.yml  agentic-coding.md  api.md  best-practices.md  building-and-deploying.md  components.md  config-and-cli.md  examples-tour.md  getting-started.md  http.md  index.md  linting.md  reactivity.md  routing.md  templates.md  testing.md  theming.md  why-zero.md
runtime/: app.js  app.test.js  binary-shim.js  binary-shim.test.js  clone-shim.js  clone-shim.test.js  dom-shim.js  dom-shim.test.js  encoding-shim.js  fetch-shim.js  (+20 more)
(+344 files in other folders)
