[package]
name = "zero"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "net"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["set-header"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
sha2 = "0.10"
anyhow = "1"
url = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
notify-debouncer-mini = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
bytes = "1"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[build-dependencies]
regex = "1"
