[workspace]
members = [
    "crates/zero",
    "crates/zero-bundler",
    "crates/zero-config",
    "crates/zero-dev",
    "crates/zero-runtime",
    "crates/zero-lint",
    "crates/zero-sass",
    "crates/zero-scaffold",
    "crates/zero-test-runner",
    "crates/zero-transpile",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "net"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["set-header"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
sha2 = "0.10"
anyhow = "1"
url = "2"
boa_engine = { version = "0.21", features = ["annex-b"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
notify-debouncer-mini = "0.4"
regex = "1"
ignore = "0.4"
swc_core = { version = "65", features = [
    "ecma_parser",
    "ecma_parser_typescript",
    "ecma_codegen",
    "ecma_transforms",
    "ecma_transforms_typescript",
    "ecma_visit",
    "ecma_ast",
    "common",
    "common_sourcemap",
] }
base64 = "0.22"
sourcemap = "9"
grass = { version = "0.13", default-features = false, features = ["random"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
bytes = "1"
http-body-util = "0.1"
