[package]
name = "zero-bundler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
zero-config = { path = "../zero-config" }
zero-runtime = { path = "../zero-runtime" }
zero-sass = { path = "../zero-sass" }
zero-transpile = { path = "../zero-transpile" }
anyhow = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
sourcemap = { workspace = true }
swc_core = { workspace = true }

[features]
test-internals = []

[dev-dependencies]
tempfile = { workspace = true }
rquickjs = { version = "0.12.0", features = ["loader", "macro"] }
