[package]
name = "zero-lint"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swc_core = { workspace = true }
zero-transpile = { path = "../zero-transpile" }

[dev-dependencies]
tempfile = { workspace = true }
