[package]
name = "zero-sass"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
grass = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
sourcemap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
