[package]
name = "zero-scaffold"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
zero-runtime = { path = "../zero-runtime" }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
zero-sass = { path = "../zero-sass" }
