[package]
name = "zero-test-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
zero-runtime = { path = "../zero-runtime" }
zero-transpile = { path = "../zero-transpile" }
boa_engine = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
sourcemap = { workspace = true }
regex = { workspace = true }
swc_core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
