[package]
name = "zero"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zero-bundler = { path = "../zero-bundler" }
zero-config = { path = "../zero-config" }
zero-dev = { path = "../zero-dev" }
zero-lint = { path = "../zero-lint" }
zero-runtime = { path = "../zero-runtime" }
zero-sass = { path = "../zero-sass" }
zero-scaffold = { path = "../zero-scaffold" }
zero-test-runner = { path = "../zero-test-runner" }
zero-transpile = { path = "../zero-transpile" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
dialoguer = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }

[dev-dependencies]
zero-bundler = { path = "../zero-bundler", features = ["test-internals"] }
zero-config = { path = "../zero-config" }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
http-body-util = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }

